# progpow-rust

./: .gitignore  Cargo.toml
pp_full/: Cargo.toml
pp_full/lib/: CMakeLists.txt
pp_full/lib/libethash-cuda/: CMakeLists.txt
pp_full/lib/libexternal/: progpow.cpp
pp_light/: Cargo.toml
src/: lib.rs
src/hardware/: cpu.rs
