[package]
name = "stack_test_progpow"
version = "0.1.0"
authors = ["Brick Abode <a@a.com>"]

[dependencies]
libc = "0.2.58"
bigint = "4.4.1"
byteorder = "^0.5"
lazy_static = "1"
dirs = "1.0.3"
stack_test_progpow_cpu = "0.1.0"

[build-dependencies]
bindgen = "0.37.0"
cmake = "0.1.40"
filetime = "0.2"

[dependencies.progpow_gpu_cuda]
package = "stack_test_progpow_gpu"
path = "./pp_full"
features = ['cuda']
optional = true

[dependencies.progpow_gpu_opencl]
package = "stack_test_progpow_gpu"
path = "./pp_full"
features = ['opencl']
optional = true

[features]
opencl = ["progpow_gpu_opencl"]
cuda = ["progpow_gpu_cuda"]
