[package]
name = "stack_test_progpow"
version = "0.1.0"
authors = ["Brick Abode <a@a.com>"]
license = "Apache-2.0"
description = "stack test progpow "
[dependencies]
libc = "0.2.58"
bigint = "4.4.1"
byteorder = "^0.5"
lazy_static = "1"
dirs = "1.0.3"
stack_test_progpow_cpu = "0.1.0"

[build-dependencies]
bindgen = "0.37.0"
cmake = "0.1.40"
filetime = "0.2"

[dependencies.stack_test_progpow_gpu]
#package = "stack_test_progpow_gpu"
#path = "./pp_full"
version = "0.1.0"
features = ['cuda', "opencl"]
optional = true

#[dependencies.stack_test_progpow_gpu]
#version = "0.1.0"
##package = "stack_test_progpow_gpu"
##path = "./pp_full"
#features = ['opencl']
#optional = true

#[features]
#opencl = ["stack_test_progpow_gpu_opencl"]
#cuda = ["stack_test_progpow_gpu_cuda"]
